# Cognitive-Memory-V4

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
grok-dream-memory/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
grok-dream-memory/api/: dashboard.html  server.py
grok-dream-memory/docs/: architecture.md
grok-dream-memory/examples/: demo.py
grok-dream-memory/src/dream_memory/: __init__.py  cli.py  config.py  dreamer.py  memory.py  scheduler.py
grok-dream-memory/tests/: test_memory.py
